--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.22.0",
     "expo": "~42.0.1",
+    "expo-linear-gradient": "^9.2.0",
+    "expo-location": "~12.1.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -17,8 +20,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/axios": "^0.14.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-vector-icons": "^6.4.9",
     "typescript": "~4.0.0"
   },
   "private": true
